cleanup: several improvements suggested by the FindBugs tool